# zk-anonymous-poll

./: .gitignore  package.json
circuits/src/: main.nr  merkle.nr
contracts/: Cargo.toml  lib.rs
scripts/: build-circuit.sh
